[package]
name = "littlefs2-sys"
description = "Low-level bindings to littlefs"
version = "0.1.6"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["embedded", "filesystem", "no-std"]
repository = "https://github.com/nickray/littlefs2-sys"

[dependencies]
cty = "0.2.1"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.31", default-features = false, features = ["std", "binstart", "native"] }

# TODO: not sure about this
# [build-dependencies]
# bindgen = { version = "0.56.0", default-features = false }
# cc = "1"
[build-dependencies]
build-tools = { path = "common/build-tools" }

[features]
assertions = []
trace = []
